Use MinGW-w64 by default

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -67,9 +67,9 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
 CONFIG_NOGLOB=y
-CONFIG_CROSS_COMPILER_PREFIX="i686-pc-mingw32-"
+CONFIG_CROSS_COMPILER_PREFIX="i686-w64-mingw32-"
 CONFIG_SYSROOT=""
-CONFIG_EXTRA_CFLAGS="-g -O0"
+CONFIG_EXTRA_CFLAGS=""
 CONFIG_EXTRA_LDFLAGS=""
 CONFIG_EXTRA_LDLIBS=""
 
