attempts at fixing slow backspace and crashing applets under shell

--- a/configs/watcom386_defconfig
+++ b/configs/watcom386_defconfig
@@ -30,14 +30,14 @@ CONFIG_FEATURE_COMPRESS_USAGE=y
 CONFIG_LOCALE_SUPPORT=y
 CONFIG_UNICODE_SUPPORT=y
 CONFIG_UNICODE_USING_LOCALE=y
-# CONFIG_FEATURE_CHECK_UNICODE_IN_ENV is not set
+CONFIG_FEATURE_CHECK_UNICODE_IN_ENV=y
 CONFIG_SUBST_WCHAR=63
 CONFIG_LAST_SUPPORTED_WCHAR=767
-# CONFIG_UNICODE_COMBINING_WCHARS is not set
+CONFIG_UNICODE_COMBINING_WCHARS=y
 CONFIG_UNICODE_WIDE_WCHARS=y
-# CONFIG_UNICODE_BIDI_SUPPORT is not set
-# CONFIG_UNICODE_NEUTRAL_TABLE is not set
-# CONFIG_UNICODE_PRESERVE_BROKEN is not set
+CONFIG_UNICODE_BIDI_SUPPORT=y
+CONFIG_UNICODE_NEUTRAL_TABLE=y
+CONFIG_UNICODE_PRESERVE_BROKEN=y
 # CONFIG_PAM is not set
 CONFIG_LONG_OPTS=y
 # CONFIG_FEATURE_DEVPTS is not set
@@ -1006,7 +1006,7 @@ CONFIG_ASH_EXPAND_PRMT=y
 # CONFIG_HUSH_RANDOM_SUPPORT is not set 
 # CONFIG_HUSH_EXPORT_N is not set 
 # CONFIG_HUSH_MODE_X is not set 
-# CONFIG_MSH=y 
+# CONFIG_MSH is not set
 CONFIG_FEATURE_SH_IS_ASH=y 
 # CONFIG_FEATURE_SH_IS_HUSH is not set
 # CONFIG_FEATURE_SH_IS_NONE is not set
@@ -1017,7 +1017,7 @@ CONFIG_SH_MATH_SUPPORT=y
 CONFIG_SH_MATH_SUPPORT_64=y 
 CONFIG_FEATURE_SH_EXTRA_QUIET=y 
 CONFIG_FEATURE_SH_STANDALONE=y 
-CONFIG_FEATURE_SH_NOFORK=y
+# CONFIG_FEATURE_SH_NOFORK is not set
 # CONFIG_FEATURE_SH_HISTFILESIZE is not set
 
 #
