--- a/Makefile.flags
+++ b/Makefile.flags
@@ -18,7 +18,7 @@ ifeq ($(CONFIG_PLATFORM_WATCOM386),y)
 # -Wc,-zu does not assume stack in data segment, injects __far
 # -Wc,-s do not do stack checks
 # -Wc,-sg grow stack
-CPPFLAGS = -std=c99 -Wc,-aa -Wc,-ai -Wc,-aq -Wc,-zev -D+
+CPPFLAGS = -std=c99 -Wc,-aa -Wc,-ai -Wc,-aq -Wc,-sg -Wc,-zev -D+
 else
 # -std=gnu99 needed for [U]LLONG_MAX on some systems
 CPPFLAGS += $(call cc-option,-std=gnu99,)
@@ -168,12 +168,11 @@ SKIP_STRIP	= y
 #format, let script believe it succeeded
 OBJCOPY 	= true
 OBJDUMP 	= dmpobj
-#some recommended flags for optimized 32-bit
-# -s strips debug flags, for debug build add -g2
-# 
+# character encoding: use tchar.h wherever possible
+# several options: none, -D_UNICODE, -D_MBCS
 ARFLAGS		= -q
-CFLAGS 		= -bnt -mtune=i686 -fptune=i686 -mthreads -D_UNICODE
-CXXFLAGS 	= -bnt -mtune=i686 -fptune=i686 -mthreads -D_UNICODE
+CFLAGS 		= -bnt -mthreads -mtune=i686 -fptune=i686 -D_UNICODE
+CXXFLAGS 	= -bnt -mthreads -mtune=i686 -fptune=i686 -D_UNICODE
 AFLAGS 		= 
 LIBPATH		= $(WATCOM)/lib386:$(WATCOM)/lib386/nt:$(WATCOM)/binnt
 LIBRARY		= ncrypt crypt32 userenv ws2_32
