--- a/configs/watcom386_win32_defconfig
+++ b/configs/watcom386_win32_defconfig
@@ -5,7 +5,10 @@
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
-CONFIG_PLATFORM_WATCOM386=y
+CONFIG_COMPILER_WATCOM=y
+CONFIG_COMPILER_WATCOM386=y
+CONFIG_PLATFORM_WATCOM386_WIN32=y
+
 
 #
 # Busybox Settings
@@ -65,7 +68,7 @@ CONFIG_STATIC=y
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_NOGLOB=y
+# CONFIG_NOGLOB is not set
 CONFIG_CROSS_COMPILER_PREFIX=""
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
