--- a/Makefile.flags
+++ b/Makefile.flags
@@ -24,23 +24,13 @@ else
 CPPFLAGS += $(call cc-option,-std=gnu99,)
 endif
 
-ifeq ($(CONFIG_COMPILER_WATCOM),y)
 CPPFLAGS += \
 	-Iinclude -Ilibbb \
 	$(if $(KBUILD_SRC),-Iinclude2 -I$(srctree)/include -I$(srctree)/libbb) \
 	-include include/autoconf.h \
 	-D_GNU_SOURCE -DNDEBUG \
 	$(if $(CONFIG_LFS),-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64) \
-	-DBB_BT=AUTOCONF_TIMESTAMP
-else
-CPPFLAGS += \
-	-Iinclude -Ilibbb \
-	$(if $(KBUILD_SRC),-Iinclude2 -I$(srctree)/include -I$(srctree)/libbb) \
-	-include include/autoconf.h \
-	-D_GNU_SOURCE -DNDEBUG \
-	$(if $(CONFIG_LFS),-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64) \
-	-D"BB_VER=KBUILD_STR($(BB_VER))" -DBB_BT=AUTOCONF_TIMESTAMP
-endif
+	-D"BB_VER=\"$(BB_VER)\"" -DBB_BT=AUTOCONF_TIMESTAMP
 
 CFLAGS += $(call cc-option,-Wall,)
 CFLAGS += $(call cc-option,-Wshadow,)
