Linux busybox builds with Watcom + many stub functions

--- a/configs/watcom386_linux_defconfig
+++ b/configs/watcom386_linux_defconfig
@@ -21,14 +21,14 @@ CONFIG_DESKTOP=y
 CONFIG_EXTRA_COMPAT=y
 # CONFIG_INCLUDE_SUSv2 is not set
 CONFIG_USE_PORTABLE_CODE=y
-# CONFIG_PLATFORM_LINUX is not set
+CONFIG_PLATFORM_LINUX=y
 CONFIG_FEATURE_BUFFERS_USE_MALLOC=y
 # CONFIG_FEATURE_BUFFERS_GO_ON_STACK is not set
 # CONFIG_FEATURE_BUFFERS_GO_IN_BSS is not set
 CONFIG_SHOW_USAGE=y
 CONFIG_FEATURE_VERBOSE_USAGE=y
 CONFIG_FEATURE_COMPRESS_USAGE=y
-# CONFIG_FEATURE_INSTALLER is not set
+CONFIG_FEATURE_INSTALLER=y
 # CONFIG_INSTALL_NO_USR is not set
 CONFIG_LOCALE_SUPPORT=y
 CONFIG_UNICODE_SUPPORT=y
@@ -49,12 +49,12 @@ CONFIG_LONG_OPTS=y
 # CONFIG_FEATURE_WTMP is not set
 # CONFIG_FEATURE_PIDFILE is not set
 CONFIG_PID_FILE_PATH=""
-# CONFIG_FEATURE_SUID is not set
+CONFIG_FEATURE_SUID=y
 # CONFIG_FEATURE_SUID_CONFIG is not set
 # CONFIG_FEATURE_SUID_CONFIG_QUIET is not set
 # CONFIG_SELINUX is not set
 CONFIG_FEATURE_PREFER_APPLETS=y
-CONFIG_BUSYBOX_EXEC_PATH=""
+CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_FEATURE_SYSLOG is not set
 # CONFIG_FEATURE_HAVE_RPC is not set
 
@@ -96,19 +96,19 @@ CONFIG_INSTALL_APPLET_SYMLINKS=y
 # CONFIG_INSTALL_SH_APPLET_SYMLINK is not set
 # CONFIG_INSTALL_SH_APPLET_HARDLINK is not set
 # CONFIG_INSTALL_SH_APPLET_SCRIPT_WRAPPER is not set
-CONFIG_PREFIX=""
+CONFIG_PREFIX="./_install"
 
 #
 # Busybox Library Tuning
 #
-# CONFIG_FEATURE_SYSTEMD is not set
+CONFIG_FEATURE_SYSTEMD=y
 CONFIG_FEATURE_RTMINMAX=y
 CONFIG_PASSWORD_MINLEN=6
 CONFIG_MD5_SMALL=1
 CONFIG_SHA3_SMALL=1
-# CONFIG_FEATURE_FAST_TOP is not set
-# CONFIG_FEATURE_ETC_NETWORKS is not set
-# CONFIG_FEATURE_USE_TERMIOS is not set
+CONFIG_FEATURE_FAST_TOP=y
+CONFIG_FEATURE_ETC_NETWORKS=y
+CONFIG_FEATURE_USE_TERMIOS=y
 CONFIG_FEATURE_EDITING=y
 CONFIG_FEATURE_EDITING_MAX_LEN=1024
 # CONFIG_FEATURE_EDITING_VI is not set
@@ -120,8 +120,8 @@ CONFIG_FEATURE_TAB_COMPLETION=y
 CONFIG_FEATURE_USERNAME_COMPLETION=y
 CONFIG_FEATURE_EDITING_FANCY_PROMPT=y
 # CONFIG_FEATURE_EDITING_ASK_TERMINAL is not set
-CONFIG_FEATURE_NON_POSIX_CP=y
-# CONFIG_FEATURE_VERBOSE_CP_MESSAGE is not set
+# CONFIG_FEATURE_NON_POSIX_CP is not set
+CONFIG_FEATURE_VERBOSE_CP_MESSAGE=y
 CONFIG_FEATURE_COPYBUF_KB=4
 CONFIG_FEATURE_SKIP_ROOTFS=y
 # CONFIG_MONOTONIC_SYSCALL is not set
@@ -135,11 +135,11 @@ CONFIG_IOCTL_HEX2STR_ERROR=y
 #
 # Archival Utilities
 #
-# CONFIG_FEATURE_SEAMLESS_XZ is not set
-# CONFIG_FEATURE_SEAMLESS_LZMA is not set
-# CONFIG_FEATURE_SEAMLESS_BZ2 is not set
-# CONFIG_FEATURE_SEAMLESS_GZ is not set
-# CONFIG_FEATURE_SEAMLESS_Z is not set
+CONFIG_FEATURE_SEAMLESS_XZ=y
+CONFIG_FEATURE_SEAMLESS_LZMA=y
+CONFIG_FEATURE_SEAMLESS_BZ2=y
+CONFIG_FEATURE_SEAMLESS_GZ=y
+CONFIG_FEATURE_SEAMLESS_Z=y
 CONFIG_AR=y
 CONFIG_FEATURE_AR_LONG_FILENAMES=y
 CONFIG_FEATURE_AR_CREATE=y
@@ -163,7 +163,7 @@ CONFIG_FEATURE_GZIP_LONG_OPTIONS=y
 CONFIG_GZIP_FAST=2
 CONFIG_LZOP=y
 # CONFIG_LZOP_COMPR_HIGH is not set
-# CONFIG_RPM2CPIO is not set
+CONFIG_RPM2CPIO=y
 # CONFIG_RPM is not set
 CONFIG_TAR=y
 CONFIG_FEATURE_TAR_CREATE=y
@@ -210,15 +210,15 @@ CONFIG_CATV=y
 CONFIG_CHMOD=y
 # CONFIG_CHOWN is not set
 # CONFIG_FEATURE_CHOWN_LONG_OPTIONS is not set
-# CONFIG_CHROOT is not set
+CONFIG_CHROOT=y
 CONFIG_CKSUM=y
 CONFIG_COMM=y
 CONFIG_CP=y
 CONFIG_FEATURE_CP_LONG_OPTIONS=y
 CONFIG_CUT=y
 CONFIG_DD=y
-# CONFIG_FEATURE_DD_SIGNAL_HANDLING is not set
-# CONFIG_FEATURE_DD_THIRD_STATUS_LINE is not set
+CONFIG_FEATURE_DD_SIGNAL_HANDLING=y
+CONFIG_FEATURE_DD_THIRD_STATUS_LINE=y
 CONFIG_FEATURE_DD_IBS_OBS=y
 CONFIG_DF=y
 # CONFIG_FEATURE_DF_FANCY is not set
@@ -242,7 +242,7 @@ CONFIG_HEAD=y
 CONFIG_FEATURE_FANCY_HEAD=y
 # CONFIG_INSTALL is not set
 # CONFIG_FEATURE_INSTALL_LONG_OPTIONS is not set
-# CONFIG_LN is not set
+CONFIG_LN=y
 # CONFIG_LOGNAME is not set
 CONFIG_LS=y
 CONFIG_FEATURE_LS_FILETYPES=y
@@ -256,8 +256,8 @@ CONFIG_FEATURE_LS_COLOR_IS_DEFAULT=y
 CONFIG_MD5SUM=y
 CONFIG_MKDIR=y
 CONFIG_FEATURE_MKDIR_LONG_OPTIONS=y
-# CONFIG_MKFIFO is not set
-# CONFIG_MKNOD is not set
+CONFIG_MKFIFO=y
+CONFIG_MKNOD=y
 CONFIG_MV=y
 CONFIG_FEATURE_MV_LONG_OPTIONS=y
 # CONFIG_NICE is not set
@@ -316,7 +316,7 @@ CONFIG_FEATURE_VERBOSE=y
 #
 # Common options for cp and mv
 #
-# CONFIG_FEATURE_PRESERVE_HARDLINKS is not set
+CONFIG_FEATURE_PRESERVE_HARDLINKS=y
 
 #
 # Common options for ls, more and telnet
@@ -336,8 +336,8 @@ CONFIG_FEATURE_MD5_SHA1_SUM_CHECK=y
 #
 # Console Utilities
 #
-# CONFIG_CHVT is not set
-# CONFIG_FGCONSOLE is not set
+CONFIG_CHVT=y
+CONFIG_FGCONSOLE=y
 CONFIG_CLEAR=y
 # CONFIG_DEALLOCVT is not set
 # CONFIG_DUMPKMAP is not set
@@ -345,7 +345,7 @@ CONFIG_CLEAR=y
 # CONFIG_LOADFONT is not set
 # CONFIG_LOADKMAP is not set
 # CONFIG_OPENVT is not set
-# CONFIG_RESET is not set
+CONFIG_RESET=y
 # CONFIG_RESIZE is not set
 # CONFIG_FEATURE_RESIZE_PRINT is not set
 # CONFIG_SETCONSOLE is not set
@@ -363,8 +363,8 @@ CONFIG_DEFAULT_SETFONT_DIR=""
 # Debian Utilities
 #
 CONFIG_MKTEMP=y
-# CONFIG_PIPE_PROGRESS is not set
-# CONFIG_RUN_PARTS is not set
+CONFIG_PIPE_PROGRESS=y
+CONFIG_RUN_PARTS=y
 # CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
 # CONFIG_FEATURE_RUN_PARTS_FANCY is not set
 # CONFIG_START_STOP_DAEMON is not set
@@ -461,19 +461,19 @@ CONFIG_FEATURE_KILL_DELAY=0
 # CONFIG_FEATURE_INIT_COREDUMPS is not set
 # CONFIG_FEATURE_INITRD is not set
 CONFIG_INIT_TERMINAL_TYPE=""
-# CONFIG_MESG is not set
-# CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP is not set
+CONFIG_MESG=y
+CONFIG_FEATURE_MESG_ENABLE_ONLY_GROUP=y
 
 #
 # Login/Password Management Utilities
 #
-# CONFIG_ADD_SHELL is not set
-# CONFIG_REMOVE_SHELL is not set
-# CONFIG_FEATURE_SHADOWPASSWDS is not set
-# CONFIG_USE_BB_PWD_GRP is not set
-# CONFIG_USE_BB_SHADOW is not set
-# CONFIG_USE_BB_CRYPT is not set
-# CONFIG_USE_BB_CRYPT_SHA is not set
+CONFIG_ADD_SHELL=y
+CONFIG_REMOVE_SHELL=y
+CONFIG_FEATURE_SHADOWPASSWDS=y
+CONFIG_USE_BB_PWD_GRP=y
+CONFIG_USE_BB_SHADOW=y
+CONFIG_USE_BB_CRYPT=y
+CONFIG_USE_BB_CRYPT_SHA=y
 # CONFIG_ADDUSER is not set
 # CONFIG_FEATURE_ADDUSER_LONG_OPTIONS is not set
 # CONFIG_FEATURE_CHECK_NAMES is not set
@@ -483,8 +483,8 @@ CONFIG_LAST_SYSTEM_ID=0
 # CONFIG_ADDGROUP is not set
 # CONFIG_FEATURE_ADDGROUP_LONG_OPTIONS is not set
 # CONFIG_FEATURE_ADDUSER_TO_GROUP is not set
-# CONFIG_DELUSER is not set
-# CONFIG_DELGROUP is not set
+CONFIG_DELUSER=y
+DELGROUP=y
 # CONFIG_FEATURE_DEL_USER_FROM_GROUP is not set
 # CONFIG_GETTY is not set
 # CONFIG_LOGIN is not set
@@ -506,9 +506,9 @@ CONFIG_FEATURE_DEFAULT_PASSWD_ALGO=""
 #
 # Linux Ext2 FS Progs
 #
-# CONFIG_CHATTR is not set
+CONFIG_CHATTR=y
 # CONFIG_FSCK is not set
-# CONFIG_LSATTR is not set
+CONFIG_LSATTR=y
 # CONFIG_TUNE2FS is not set
 
 #
@@ -548,12 +548,12 @@ CONFIG_DEFAULT_DEPMOD_FILE=""
 # CONFIG_BLOCKDEV is not set
 # CONFIG_FATATTR is not set
 # CONFIG_FSTRIM is not set
-# CONFIG_MDEV is not set
+CONFIG_MDEV=y
 # CONFIG_FEATURE_MDEV_CONF is not set
 # CONFIG_FEATURE_MDEV_RENAME is not set
 # CONFIG_FEATURE_MDEV_RENAME_REGEXP is not set
 # CONFIG_FEATURE_MDEV_EXEC is not set
-# CONFIG_FEATURE_MDEV_LOAD_FIRMWARE is not set
+CONFIG_FEATURE_MDEV_LOAD_FIRMWARE=y
 CONFIG_REV=y
 # CONFIG_ACPID is not set
 # CONFIG_FEATURE_ACPID_COMPAT is not set
@@ -561,8 +561,8 @@ CONFIG_REV=y
 # CONFIG_FEATURE_BLKID_TYPE is not set
 # CONFIG_DMESG is not set
 # CONFIG_FEATURE_DMESG_PRETTY is not set
-# CONFIG_FBSET is not set
-# CONFIG_FEATURE_FBSET_FANCY is not set
+CONFIG_FBSET=y
+CONFIG_FEATURE_FBSET_FANCY=y
 # CONFIG_FEATURE_FBSET_READMODE is not set
 # CONFIG_FDFLUSH is not set
 # CONFIG_FDFORMAT is not set
@@ -595,11 +595,11 @@ CONFIG_HD=y
 # CONFIG_IPCRM is not set
 # CONFIG_IPCS is not set
 # CONFIG_LOSETUP is not set
-# CONFIG_LSPCI is not set
-# CONFIG_LSUSB is not set
+CONFIG_LSPCI=y
+CONFIG_LSUSB=y
 # CONFIG_MKSWAP is not set
 # CONFIG_FEATURE_MKSWAP_UUID is not set
-# CONFIG_MORE is not set
+CONFIG_MORE=y
 # CONFIG_MOUNT is not set
 # CONFIG_FEATURE_MOUNT_FAKE is not set
 # CONFIG_FEATURE_MOUNT_VERBOSE is not set
@@ -612,10 +612,10 @@ CONFIG_HD=y
 # CONFIG_PIVOT_ROOT is not set
 # CONFIG_RDATE is not set
 # CONFIG_RDEV is not set
-# CONFIG_READPROFILE is not set
-# CONFIG_RTCWAKE is not set
+CONFIG_READPROFILE=y
+CONFIG_RTCWAKE=y
 # CONFIG_SCRIPT is not set
-# CONFIG_SCRIPTREPLAY is not set
+CONFIG_SCRIPTREPLAY=y
 # CONFIG_SETARCH is not set
 # CONFIG_SWAPONOFF is not set
 # CONFIG_FEATURE_SWAPON_DISCARD is not set
@@ -670,7 +670,7 @@ CONFIG_FEATURE_LESS_MAXLINES=0
 # CONFIG_NANDWRITE is not set
 # CONFIG_NANDDUMP is not set
 # CONFIG_RFKILL is not set
-# CONFIG_SETSERIAL is not set
+CONFIG_SETSERIAL=y
 # CONFIG_UBIATTACH is not set
 # CONFIG_UBIDETACH is not set
 # CONFIG_UBIMKVOL is not set
@@ -737,9 +737,9 @@ CONFIG_STRINGS=y
 # CONFIG_TASKSET is not set
 # CONFIG_FEATURE_TASKSET_FANCY is not set
 # CONFIG_TIME is not set
-# CONFIG_TIMEOUT is not set
-# CONFIG_TTYSIZE is not set
-# CONFIG_VOLNAME is not set
+CONFIG_TIMEOUT=y
+CONFIG_TTYSIZE=y
+CONFIG_VOLNAME=y
 # CONFIG_WATCHDOG is not set
 
 #
@@ -909,12 +909,12 @@ CONFIG_FEATURE_MIME_CHARSET=""
 # CONFIG_IOSTAT is not set
 # CONFIG_LSOF is not set
 # CONFIG_MPSTAT is not set
-# CONFIG_NMETER is not set
+CONFIG_NMETER=y
 # CONFIG_PMAP is not set
 # CONFIG_POWERTOP is not set
-# CONFIG_PSTREE is not set
-# CONFIG_PWDX is not set
-# CONFIG_SMEMCAP is not set
+CONFIG_PSTREE=y
+CONFIG_PWDX=y
+CONFIG_SMEMCAP=y
 # CONFIG_TOP is not set
 # CONFIG_FEATURE_TOP_CPU_USAGE_PERCENTAGE is not set
 # CONFIG_FEATURE_TOP_CPU_GLOBAL_PERCENTS is not set
@@ -925,7 +925,7 @@ CONFIG_FEATURE_MIME_CHARSET=""
 # CONFIG_UPTIME is not set
 # CONFIG_FEATURE_UPTIME_UTMP_SUPPORT is not set
 # CONFIG_FREE is not set
-# CONFIG_FUSER is not set
+CONFIG_FUSER=y
 CONFIG_KILL=y
 CONFIG_KILLALL=y
 # CONFIG_KILLALL5 is not set
@@ -943,7 +943,7 @@ CONFIG_PS=y
 # CONFIG_RENICE is not set
 # CONFIG_BB_SYSCTL is not set
 # CONFIG_FEATURE_SHOW_THREADS is not set
-# CONFIG_WATCH is not set
+CONFIG_WATCH=y
 
 #
 # Runit Utilities
