--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -979,19 +979,20 @@ CONFIG_SV_DEFAULT_SERVICE_DIR=""
 CONFIG_ASH=y
 CONFIG_ASH_BASH_COMPAT=y
 # CONFIG_ASH_IDLE_TIMEOUT is not set
-# CONFIG_ASH_JOB_CONTROL is not set 
+# CONFIG_ASH_JOB_CONTROL is not set
 CONFIG_ASH_ALIAS=y
-CONFIG_ASH_GETOPT=y
+CONFIG_ASH_GETOPTS=y
 CONFIG_ASH_BUILTIN_ECHO=y
-CONFIG_ASH_BUILTIN_PRINTF=y 
-CONFIG_ASH_BUILTIN_TEST=y 
+CONFIG_ASH_BUILTIN_PRINTF=y
+CONFIG_ASH_BUILTIN_TEST=y
+CONFIG_ASH_HELP=y
 CONFIG_ASH_CMDCMD=y
 # CONFIG_ASH_MAIL is not set
 CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
-CONFIG_ASH_RANDOM_SUPPORT=y 
+CONFIG_ASH_RANDOM_SUPPORT=y
 CONFIG_ASH_EXPAND_PRMT=y
 # CONFIG_CTTYHACK is not set
-# CONFIG_HUSH is not set 
+# CONFIG_HUSH is not set
 # CONFIG_HUSH_BASH_COMPAT is not set
 # CONFIG_HUSH_BRACE_EXPANSION is not set
 # CONFIG_HUSH_HELP is not set
@@ -1000,24 +1001,24 @@ CONFIG_ASH_EXPAND_PRMT=y
 # CONFIG_HUSH_JOB is not set
 # CONFIG_HUSH_TICK is not set
 # CONFIG_HUSH_IF is not set
-# CONFIG_HUSH_LOOPS is not set 
-# CONFIG_HUSH_CASE is not set 
-# CONFIG_HUSH_FUNCTIONS is not set 
-# CONFIG_HUSH_LOCAL is not set 
-# CONFIG_HUSH_RANDOM_SUPPORT is not set 
-# CONFIG_HUSH_EXPORT_N is not set 
-# CONFIG_HUSH_MODE_X is not set 
-# CONFIG_MSH=y 
-CONFIG_FEATURE_SH_IS_ASH=y 
+# CONFIG_HUSH_LOOPS is not set
+# CONFIG_HUSH_CASE is not set
+# CONFIG_HUSH_FUNCTIONS is not set
+# CONFIG_HUSH_LOCAL is not set
+# CONFIG_HUSH_RANDOM_SUPPORT is not set
+# CONFIG_HUSH_EXPORT_N is not set
+# CONFIG_HUSH_MODE_X is not set
+# CONFIG_MSH is not set
+CONFIG_FEATURE_SH_IS_ASH=y
 # CONFIG_FEATURE_SH_IS_HUSH is not set
 # CONFIG_FEATURE_SH_IS_NONE is not set
 CONFIG_FEATURE_BASH_IS_ASH=y
-# CONFIG_FEATURE_BASH_IS_HUSH is not set 
+# CONFIG_FEATURE_BASH_IS_HUSH is not set
 # CONFIG_FEATURE_BASH_IS_NONE is not set
-CONFIG_SH_MATH_SUPPORT=y 
-CONFIG_SH_MATH_SUPPORT_64=y 
-CONFIG_FEATURE_SH_EXTRA_QUIET=y 
-CONFIG_FEATURE_SH_STANDALONE=y 
+CONFIG_SH_MATH_SUPPORT=y
+CONFIG_SH_MATH_SUPPORT_64=y
+CONFIG_FEATURE_SH_EXTRA_QUIET=y
+CONFIG_FEATURE_SH_STANDALONE=y
 CONFIG_FEATURE_SH_NOFORK=y
 CONFIG_FEATURE_SH_HISTFILESIZE=y
 
