build fixes + elimination of ENABLE_PLATFORM_MINGW32 contamination in gcc-linux build

--- a/configs/watcom386_win32_defconfig
+++ b/configs/watcom386_win32_defconfig
@@ -42,6 +42,7 @@ CONFIG_UNICODE_BIDI_SUPPORT=y
 CONFIG_UNICODE_NEUTRAL_TABLE=y
 CONFIG_UNICODE_PRESERVE_BROKEN=y
 # CONFIG_PAM is not set
+# CONFIG_FEATURE_USE_SENDFILE is not set
 CONFIG_LONG_OPTS=y
 # CONFIG_FEATURE_DEVPTS is not set
 # CONFIG_FEATURE_CLEAN_UP is not set
@@ -111,11 +112,11 @@ CONFIG_SHA3_SMALL=1
 # CONFIG_FEATURE_USE_TERMIOS is not set
 CONFIG_FEATURE_EDITING=y
 CONFIG_FEATURE_EDITING_MAX_LEN=1024
-# CONFIG_FEATURE_EDITING_VI is not set
+CONFIG_FEATURE_EDITING_VI=y
 CONFIG_FEATURE_EDITING_HISTORY=255
-# CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
+CONFIG_FEATURE_EDITING_SAVEHISTORY=y
 # CONFIG_FEATURE_EDITING_SAVE_ON_EXIT is not set
-# CONFIG_FEATURE_REVERSE_SEARCH is not set
+CONFIG_FEATURE_REVERSE_SEARCH=y
 CONFIG_FEATURE_TAB_COMPLETION=y
 CONFIG_FEATURE_USERNAME_COMPLETION=y
 CONFIG_FEATURE_EDITING_FANCY_PROMPT=y
@@ -771,6 +772,7 @@ CONFIG_STRINGS=y
 # CONFIG_FTPD is not set
 # CONFIG_FEATURE_FTP_WRITE is not set
 # CONFIG_FEATURE_FTPD_ACCEPT_BROKEN_LIST is not set
+# CONFIG_FEATURE_FTP_AUTHENTICATION is not set
 CONFIG_FTPGET=y
 CONFIG_FTPPUT=y
 CONFIG_FEATURE_FTPGETPUT_LONG_OPTIONS=y
@@ -983,10 +985,11 @@ CONFIG_ASH_BASH_COMPAT=y
 # CONFIG_ASH_IDLE_TIMEOUT is not set
 # CONFIG_ASH_JOB_CONTROL is not set 
 CONFIG_ASH_ALIAS=y
-CONFIG_ASH_GETOPT=y
+CONFIG_ASH_GETOPTS=y
 CONFIG_ASH_BUILTIN_ECHO=y
 CONFIG_ASH_BUILTIN_PRINTF=y 
-CONFIG_ASH_BUILTIN_TEST=y 
+CONFIG_ASH_BUILTIN_TEST=y
+CONFIG_ASH_HELP=y
 CONFIG_ASH_CMDCMD=y
 # CONFIG_ASH_MAIL is not set
 CONFIG_ASH_OPTIMIZE_FOR_SIZE=y
@@ -1020,8 +1023,8 @@ CONFIG_SH_MATH_SUPPORT=y
 CONFIG_SH_MATH_SUPPORT_64=y 
 CONFIG_FEATURE_SH_EXTRA_QUIET=y 
 CONFIG_FEATURE_SH_STANDALONE=y 
-# CONFIG_FEATURE_SH_NOFORK is not set
-# CONFIG_FEATURE_SH_HISTFILESIZE is not set
+CONFIG_FEATURE_SH_NOFORK=y
+CONFIG_FEATURE_SH_HISTFILESIZE=y
 
 #
 # System Logging Utilities
