further attempts at Watcom as HOSTCC, switch to gnulib regex

--- a/scripts/Makefile.host
+++ b/scripts/Makefile.host
@@ -89,10 +89,10 @@ __hostc_flags   = -I$(obj) $(call flags,_hostc_flags)
 __hostcxx_flags = -I$(obj) $(call flags,_hostcxx_flags)
 endif
 
-#ifeq ($(CONFIG_PLATFORM_WATCOM386),y)
+#ifeq ($(CONFIG_COMPILER_WATCOM),y)
 #HOSTCC = owcc
 #HOSTCXX = owcc
-#HOSTCFLAGS = -std=c99 -Wc,-aa -Wc,-zev -D+
+#HOSTCFLAGS = -std=c99 -Wc,-aa -Wc,-zev -Wc,-hd -D+ -g3
 #HOSTCXXFLAGS = -D+
 #HOSTCPPFLAGS = 
 #hostc_flags    = $(__hostc_flags)
