--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.24.0.git
-# Mon Mar 23 13:58:33 2015
+# Sun Apr 12 13:04:19 2015
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -66,7 +66,7 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
-CONFIG_NOGLOB=y
+# CONFIG_GLOBBING is not set
 CONFIG_CROSS_COMPILER_PREFIX="i686-w64-mingw32-"
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
