mingw: import select from gnulib
There are two changes from gnulib:

   Treat a broken pipe as readable.  If nc doesn't try to read from
   the pipe it'll never find out it's broken.

   Only allow console key press events to indicate that stdin is
   readable.  read_key leaves a key release event in the buffer
   at the end of a shell command.  This caused nc to block, thinking
   that the console had input available.

--- a/win32/Kbuild
+++ b/win32/Kbuild
@@ -12,6 +12,7 @@ lib-$(CONFIG_PLATFORM_MINGW32) += process.o
 lib-$(CONFIG_PLATFORM_MINGW32) += regex.o
 lib-$(CONFIG_PLATFORM_MINGW32) += net.o
 lib-$(CONFIG_PLATFORM_MINGW32) += poll.o
+lib-$(CONFIG_PLATFORM_MINGW32) += select.o
 lib-$(CONFIG_PLATFORM_MINGW32) += popen.o
 lib-$(CONFIG_PLATFORM_MINGW32) += statfs.o
 lib-$(CONFIG_PLATFORM_MINGW32) += mempcpy.o
