--- a/Config.in
+++ b/Config.in
@@ -642,6 +642,16 @@ config GLOBBING
 	  the BusyBox binary to handle wildcard expansion using the C runtime
 	  set this to 'Y'.
 
+config SAFE_ENV
+	bool "Manipulate the environment through safe API calls"
+	default n
+	depends on PLATFORM_MINGW32
+	help
+	  Enable this option to use safe API calls when clearing environment
+	  variables.  This is necessary if BusyBox is to run on ReactOS or
+	  64-bit Windows.  The default is 'N', which must be used if BusyBox
+	  is to run on Windows XP.
+
 config CROSS_COMPILER_PREFIX
 	string "Cross Compiler prefix"
 	default ""
