--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.24.0.git
-# Fri Jul  3 14:08:24 2015
+# Fri Jul  3 13:59:27 2015
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -67,8 +67,8 @@ CONFIG_BUSYBOX_EXEC_PATH=""
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
 CONFIG_LFS=y
 # CONFIG_GLOBBING is not set
-# CONFIG_SAFE_ENV is not set
-CONFIG_CROSS_COMPILER_PREFIX="i686-w64-mingw32-"
+CONFIG_SAFE_ENV=y
+CONFIG_CROSS_COMPILER_PREFIX="x86_64-w64-mingw32-"
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS=""
 CONFIG_EXTRA_LDFLAGS=""
