mingw: include unwind tables in 64-bit build by default
Add "-funwind-tables -fasynchronous-unwind-tables" to CFLAGS for
the 64-bit build, overriding the usual default.  Without this
change setjmp/longjmp don't work.

--- a/configs/mingw64_defconfig
+++ b/configs/mingw64_defconfig
@@ -70,7 +70,7 @@ CONFIG_LFS=y
 CONFIG_SAFE_ENV=y
 CONFIG_CROSS_COMPILER_PREFIX="x86_64-w64-mingw32-"
 CONFIG_SYSROOT=""
-CONFIG_EXTRA_CFLAGS=""
+CONFIG_EXTRA_CFLAGS="-funwind-tables -fasynchronous-unwind-tables"
 CONFIG_EXTRA_LDFLAGS=""
 CONFIG_EXTRA_LDLIBS=""
 
