Update default configuration after merge

--- a/configs/mingw32_defconfig
+++ b/configs/mingw32_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.24.0.git
-# Wed Jul 15 14:03:10 2015
+# Tue Aug  4 09:49:37 2015
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_PLATFORM_POSIX is not set
@@ -197,6 +197,8 @@ CONFIG_FEATURE_DD_STATUS=y
 CONFIG_ID=y
 CONFIG_GROUPS=y
 CONFIG_SHUF=y
+# CONFIG_SYNC is not set
+# CONFIG_FEATURE_SYNC_FANCY is not set
 CONFIG_TEST=y
 CONFIG_FEATURE_TEST_64=y
 CONFIG_TOUCH=y
@@ -290,7 +292,6 @@ CONFIG_STAT=y
 CONFIG_FEATURE_STAT_FORMAT=y
 # CONFIG_STTY is not set
 CONFIG_SUM=y
-# CONFIG_SYNC is not set
 CONFIG_TAC=y
 CONFIG_TAIL=y
 CONFIG_FEATURE_FANCY_TAIL=y
@@ -299,6 +300,7 @@ CONFIG_FEATURE_TEE_USE_BLOCK_IO=y
 CONFIG_TRUE=y
 # CONFIG_TTY is not set
 CONFIG_UNAME=y
+CONFIG_UNAME_OSNAME="MS/Windows"
 CONFIG_UNEXPAND=y
 CONFIG_FEATURE_UNEXPAND_LONG_OPTIONS=y
 CONFIG_UNIQ=y
@@ -669,6 +671,7 @@ CONFIG_FEATURE_CROND_DIR=""
 CONFIG_FEATURE_LESS_MAXLINES=0
 # CONFIG_FEATURE_LESS_BRACKETS is not set
 # CONFIG_FEATURE_LESS_FLAGS is not set
+# CONFIG_FEATURE_LESS_TRUNCATE is not set
 # CONFIG_FEATURE_LESS_MARKS is not set
 # CONFIG_FEATURE_LESS_REGEXP is not set
 # CONFIG_FEATURE_LESS_WINCH is not set
